--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
   <version>7.6.0</version>
   <scope>test</scope>
 </dependency>
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.1.0</version>
+</dependency>
   </dependencies>
     <build>
     <plugins>
