--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
     <artifactId>extentreports</artifactId>
     <version>5.1.0</version>
 </dependency>
+<dependency>
+    <groupId>com.opencsv</groupId>
+    <artifactId>opencsv</artifactId>
+    <version>5.7.1</version>
+</dependency>
   </dependencies>
     <build>
     <plugins>
