--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
   <scope>test</scope>
 </dependency>
 <dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.13.0</version>
+</dependency>
+<dependency>
     <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
     <version>5.1.0</version>
